tests/snapshots/json__waketimers_default.snap
---
source: tests/json.rs
assertion_line: 319
expression: v
---
{
  "rtc_wakealarm": null,
  "wake_timers": "[redacted-live-dbus]"
}
